--- a/templates/hello.html
+++ b/templates/hello.html
@@ -18,7 +18,7 @@
                 <tr>
                     <th><a href="/logs/{{item.components}}">{{item.components}}</a></th>
                     <th>{{item.version}}</th>
-                    <th>{{item.systems}}</th>
+                    <th><a href="/syslogs/{{item.systems}}">{{item.systems}}</a></th>
                     <th>{{item.timestamp}}</th>
                     <th>{{item.source}}</th>
                     <th>
