add source views

--- a/app/templates/current.html
+++ b/app/templates/current.html
@@ -29,7 +29,7 @@
                         <th>{{item.version}}</th>
                         <th><a href="/current/systems/{{item.systems}}">{{item.systems}}</a></th>
                         <th>{{item.timestamp}}</th>
-                        <th>{{item.source}}</th>
+                        <th><a href="/current/source/{{item.source}}">{{item.source}}</a></th>
                         <th>
                             <div id="register_button">
                                 <form action="/update" method="POST" datatype="json">
