--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -27,7 +27,7 @@
                             <th>{{item.version}}</th>
                             <th><a href="/syslogs/{{item.systems}}">{{item.systems}}</a></th>
                             <th>{{item.timestamp}}</th>
-                            <th>{{item.source}}</th>
+                            <th><a href="/sourcelogs/{{item.source}}">{{item.source}}</a></th>
                             <th>
                                 <div id="register_button">
                                     <form action="/update" method="POST" datatype="json">
