--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,34 +5,65 @@
     <meta charset="UTF-8">
 
     <title>VISOCON</title>
-    <link href=
-    "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
-    rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"rel="stylesheet" type="text/css">
+    <style type="text/css">
+    body {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #eee;
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+.form-signin .checkbox {
+  font-weight: normal;
+}
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+    </style>
 </head>
 
 <body>
-    <form action="" class="form-horizontal" method="post">
-        <fieldset>
+<h2 class="text-center">Active system components version storage and visualization</h2>
+  <div class="container-fluid col-md-offset-4 col-xs-6 col-md-4">
+  <form action="" class="form-signin" method="post">
+         <h2 class="form-signin-heading">Please sign in </h2>   
+          <fieldset>
             <!-- Form Name -->
-            <legend>Login</legend> <!-- Text input-->
 
-            <div class="control-group">
-                <label class="control-label" for="textinput">Enter Username</label>
-                <div class="controls">
-                    <input class="input-xlarge" id="username" name="username"
-                    placeholder="Enter Username" required="" type="text">
-                </div>
-            </div><!-- Password input-->
-
-            <div class="control-group">
-                <label class="control-label" for="passwordinput">Enter Password
-                </label>
-
-                <div class="controls">
-                    <input class="input-xlarge" id="password" name="password"
-                    placeholder="Password" required="" type="password">
-                </div>
-            </div><!-- Button -->
+        <label for="username" class="sr-only">Email address</label>
+        <input type="text" id="username" class="form-control" placeholder="Username" name='username' required autofocus>
+        
+        <label for="password" class="sr-only">Password</label>
+        <input type="password" id="password" name='password' class="form-control" placeholder="Password" required>
 
             <div class="control-group">
                 <div class="controls">
@@ -41,6 +72,8 @@
                 </div>
             </div>
         </fieldset>
-    </form><!-- <script src="/static/js/moment.min.js"></script> -->
+    </form>
+  </div>
+  <!-- <script src="/static/js/moment.min.js"></script> -->
 </body>
 </html>
